force-app/main/default/objects/Supply_Order__c/Supply_Order__c.object-meta.xml
<CustomObject>
    <label>Supply Order</label>
    <nameField>
        <label>Supply Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supply Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>