force-app/main/default/objects/Supply_Order__c/fields/Order_Cost__c.field-meta.xml
<CustomField>
    <fullName>Order_Cost__c</fullName>
    <description>The cost of the supply order.</description>
    <label>Order Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>