force-app/main/default/objects/Supply_Order__c/fields/Order_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>The date and time the order was placed.</description>
    <label>Order Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>