force-app/main/default/objects/Supply_Order__c/fields/Supply_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Supply_Order_ID__c</fullName>
    <displayFormat>O-{00000}</displayFormat>
    <label>Supply Order ID</label>
    <type>AutoNumber</type>
</CustomField>