force-app/main/default/objects/Supply_Order__c/listViews/Completed_Orders.listView-meta.xml
<ListView>
    <fullName>Completed_Orders</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>Completed Orders</label>
</ListView>